--- a/src/css/index.css
+++ b/src/css/index.css
@@ -777,7 +777,7 @@ body {
 
 .section-tours {
   background-color: #f7f7f7;
-  padding: 25rem 25rem 10rem 25rem;
+  padding: 25rem 10rem;
   margin-top: -10rem; }
 
 .section-stories {
