--- a/src/sass/page/_home.scss
+++ b/src/sass/page/_home.scss
@@ -27,7 +27,7 @@
 
 .section-tours {
     background-color: $color-grey-light-1;
-    padding: 25rem 25rem 10rem 25rem;
+    padding: 25rem 10rem;
     margin-top: -10rem;
 }
 
