--- a/src/css/index.css
+++ b/src/css/index.css
@@ -68,7 +68,11 @@ html {
       font-size: 75%; } }
 
 body {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  padding: 3rem; }
+  @media (max-width: 56.25em) {
+    body {
+      padding: 0; } }
 
 a {
   text-decoration: none;
@@ -78,8 +82,7 @@ body {
   font-family: 'Lato', sans-serif;
   font-weight: 400;
   line-height: 1.7;
-  color: #777;
-  padding: 3rem; }
+  color: #777; }
 
 .heading-primary {
   color: #fff;
@@ -93,11 +96,18 @@ body {
     letter-spacing: 3.5rem;
     text-align: center;
     animation: moveInLeft 3s ease-out; }
+    @media (max-width: 37.5em) {
+      .heading-primary--main {
+        letter-spacing: 1rem;
+        font-size: 5rem; } }
   .heading-primary--sub {
     display: block;
-    font-size: 2rem;
-    letter-spacing: 1.7rem;
+    font-size: 1.5rem;
+    letter-spacing: 1.2rem;
     animation: moveInRight 3s ease-out; }
+    @media (max-width: 37.5em) {
+      .heading-primary--sub {
+        letter-spacing: 0.5rem; } }
 
 .heading-secondary {
   font-size: 3.5rem;
@@ -112,6 +122,12 @@ body {
   .heading-secondary:hover {
     transform: skew(-15deg, 0deg) scale(1.1);
     text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
+  @media (max-width: 56.25em) {
+    .heading-secondary {
+      font-size: 2.5rem; } }
+  @media (max-width: 37.5em) {
+    .heading-secondary {
+      font-size: 2rem; } }
 
 .heading-tertiary {
   font-size: 1.6rem;
@@ -134,6 +150,9 @@ body {
 
 .u-margin-bottom-big {
   margin-bottom: 8rem !important; }
+  @media (max-width: 56.25em) {
+    .u-margin-bottom-big {
+      margin-bottom: 4rem !important; } }
 
 .u-margin-bottom-small {
   margin-top: 1.5rem !important; }
@@ -316,12 +335,19 @@ body {
   text-transform: uppercase;
   text-align: right;
   width: 65%; }
+  @media (max-width: 75em) {
+    .card__heading {
+      width: 80%;
+      font-size: 2.5rem; } }
 
 .card__heading-span {
   padding: 0.7rem 0.5rem;
   -webkit-box-decoration-break: clone;
   box-decoration-break: clone;
   text-align: right; }
+  @media (max-width: 75em) {
+    .card__heading-span {
+      padding: 0.7rem 0.1rem; } }
   .card__heading-span--1 {
     background-image: linear-gradient(to right bottom, rgba(255, 185, 0, 0.85), rgba(255, 119, 48, 0.85)); }
   .card__heading-span--2 {
@@ -365,8 +391,15 @@ body {
   background-color: rgba(255, 255, 255, 0.6);
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
   transform: skewX(-15deg); }
+  @media (max-width: 56.25em) {
+    .story {
+      padding: 4rem;
+      transform: none; } }
   .story > * {
     transform: skewX(15deg); }
+    @media (max-width: 56.25em) {
+      .story > * {
+        transform: none; } }
   .story__shape {
     position: relative;
     width: 15rem;
@@ -377,6 +410,11 @@ body {
     shape-outside: circle(50% at 50% 50%);
     clip-path: circle(50% at 50% 50%);
     transform: translateX(-3rem) skewX(15deg); }
+    @media (max-width: 56.25em) {
+      .story__shape {
+        width: 10rem;
+        height: 10rem;
+        transform: translateX(-1rem); } }
   .story__img {
     height: 100%;
     backface-visibility: hidden;
@@ -495,12 +533,26 @@ body {
     content: '';
     display: block;
     clear: both; }
+  @media (max-width: 56.25em) {
+    .row {
+      max-width: 50rem;
+      padding: 2rem; } }
   .row:not(:last-child) {
     margin-bottom: 8rem; }
+    @media (max-width: 56.25em) {
+      .row:not(:last-child) {
+        margin-bottom: 6rem; } }
   .row [class^="col-"] {
     float: left; }
     .row [class^="col-"]:not(:last-child) {
       margin-right: 6rem; }
+      @media (max-width: 56.25em) {
+        .row [class^="col-"]:not(:last-child) {
+          margin-right: 0 !important;
+          margin-bottom: 8rem; } }
+    @media (max-width: 56.25em) {
+      .row [class^="col-"] {
+        width: 100% !important; } }
   .row .col-1-of-2 {
     width: calc((100% - 6rem) / 2); }
   .row .col-1-of-3 {
@@ -522,6 +574,9 @@ body {
   background-size: cover;
   background-attachment: fixed;
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); }
+  @media (max-width: 37.5em) {
+    .header {
+      clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%); } }
 
 .header__logo-box {
   position: absolute;
@@ -543,6 +598,9 @@ body {
   color: #fff;
   padding: 10rem 0;
   font-size: 1.4rem; }
+  @media (max-width: 56.25em) {
+    .footer {
+      padding: 6rem 0; } }
   .footer__logo-box {
     text-align: center; }
   .footer__logo {
@@ -552,6 +610,10 @@ body {
     display: inline-block;
     border-top: 1px solid rgba(255, 255, 255, 0.1);
     padding-top: 2rem; }
+    @media (max-width: 56.25em) {
+      .footer__nav {
+        width: 100%;
+        text-align: center; } }
   .footer__list {
     list-style: none; }
     .footer__list:after {
@@ -570,7 +632,14 @@ body {
     text-decoration: none; }
   .footer__copy-right {
     border-top: 1px solid rgba(255, 255, 255, 0.1);
-    padding-top: 2rem; }
+    padding-top: 2rem;
+    width: 80%;
+    float: right; }
+    @media (max-width: 56.25em) {
+      .footer__copy-right {
+        width: 100%;
+        text-align: center;
+        float: none; } }
 
 .navigation__checkbox {
   display: none; }
@@ -597,6 +666,14 @@ body {
   z-index: 2001;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
   transition: all 0.2s; }
+  @media (max-width: 56.25em) {
+    .navigation__button {
+      top: 4rem;
+      right: 4rem; } }
+  @media (max-width: 37.5em) {
+    .navigation__button {
+      top: 3rem;
+      right: 3rem; } }
   .navigation__button:hover {
     transform: translateY(-3px); }
   .navigation__button:active {
@@ -613,6 +690,14 @@ body {
   z-index: 1000;
   -webkit-transition: all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
   transition: all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55); }
+  @media (max-width: 56.25em) {
+    .navigation__background {
+      top: 4.5rem;
+      right: 4.5rem; } }
+  @media (max-width: 37.5em) {
+    .navigation__background {
+      top: 3.5rem;
+      right: 3.5rem; } }
 
 .navigation__nav {
   height: 100vh;
@@ -760,8 +845,11 @@ body {
 
 .section-about {
   background-color: #f7f7f7;
-  padding: 25rem 0;
+  padding: 25rem 2rem;
   margin-top: -20vh; }
+  @media (max-width: 56.25em) {
+    .section-about {
+      padding: 25rem 0 40rem 0; } }
 
 .section-feature {
   padding: 20rem 0;
@@ -774,28 +862,42 @@ body {
   transform: skewY(-7deg); }
   .section-feature > * {
     transform: skewY(7deg); }
+  @media (max-width: 56.25em) {
+    .section-feature {
+      padding: 10rem 0; } }
 
 .section-tours {
   background-color: #f7f7f7;
   padding: 25rem 10rem;
   margin-top: -10rem; }
+  @media (max-width: 56.25em) {
+    .section-tours {
+      padding: 20rem 0 10rem 0; } }
 
 .section-stories {
   position: relative;
   background-color: transparent;
   padding: 15rem 0; }
+  @media (max-width: 56.25em) {
+    .section-stories {
+      padding: 10rem 0; } }
 
 .section-book {
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8));
   padding: 15rem 0; }
 
 .book {
-  height: 50rem;
   margin: 0 auto;
   background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.8) 50%, transparent 50%), url("https://raw.githubusercontent.com/jonasschmedtmann/advanced-css-course/master/Natours/starter/img/nat-10.jpg");
   background-size: cover;
   background-position: center;
   border-radius: 4px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.3); }
+  @media (max-width: 56.25em) {
+    .book {
+      background-image: linear-gradient(to right, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.8) 100%), url("https://raw.githubusercontent.com/jonasschmedtmann/advanced-css-course/master/Natours/starter/img/nat-10.jpg"); } }
   .book__form {
     width: 50%; }
+    @media (max-width: 56.25em) {
+      .book__form {
+        width: 100%; } }
