--- a/src/sass/abstract/_variable.scss
+++ b/src/sass/abstract/_variable.scss
@@ -26,4 +26,7 @@ $default-font-size: 1.6rem;
 
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
+$gutter-vertical-sm: 6rem;
 $gutter-horizontal: 6rem;
+$gutter-horizontal-sm: 4rem;
+
