--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -30,7 +30,16 @@ html {
 
 body {
     box-sizing: border-box;
+    padding: 3rem;
+
+    @include respond(pad) {
+        padding: 0;
+    } // 1rem = 8px , 8 / 16 = 50%
+
+
 }
+
+
 
 a {
     text-decoration: none;
