--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -4,7 +4,6 @@ body {
     font-weight: 400;
     line-height: 1.7;
     color: $color-grey-dark;
-    padding: 3rem;
 }
 
 .heading-primary {
@@ -14,19 +13,30 @@ body {
     backface-visibility: hidden;
     margin-bottom: 6rem;
 
+
     &--main {
         display: block;
         font-size: 6rem;
         letter-spacing: 3.5rem;
         text-align: center;
         animation: moveInLeft 3s ease-out;
+
+        @include respond(phone) {
+            letter-spacing: 1rem;
+            font-size: 5rem;
+        }
+
     }
 
     &--sub {
         display: block;
-        font-size: 2rem;
-        letter-spacing: 1.7rem;
+        font-size: 1.5rem;
+        letter-spacing: 1.2rem;
         animation: moveInRight 3s ease-out;
+
+        @include respond(phone) {
+            letter-spacing: 0.5rem;
+        }
     }
 
 }
@@ -46,12 +56,21 @@ body {
         transform: skew(-15deg, 0deg) scale(1.1);
         text-shadow: 0.5rem 1rem 2rem rgba($color-black, 0.2);
     }
+
+    @include respond(pad) {
+        font-size: 2.5rem;
+    }
+
+    @include respond(phone) {
+        font-size: 2rem;
+    }
 }
 
 .heading-tertiary {
     font-size: $default-font-size;
     font-weight: 700;
     text-transform: uppercase;
+
 }
 
 .paragraph {
