--- a/src/sass/base/_utils.scss
+++ b/src/sass/base/_utils.scss
@@ -12,7 +12,12 @@
 
 .u-margin-bottom-big {
     margin-bottom: 8rem !important;
+    @include respond(pad) {
+        margin-bottom: 4rem !important;
+    }
 }
+
+
 
 .u-margin-bottom-small {
     margin-top: 1.5rem !important;
@@ -24,4 +29,8 @@
 
 .u-margin-top-big {
     margin-top: 8rem !important;
+
+    @include respond(tab) {
+        margin-top: 6rem !important;
+    }
 }
