--- a/src/sass/component/_card.scss
+++ b/src/sass/component/_card.scss
@@ -91,6 +91,11 @@
         text-transform: uppercase;
         text-align: right;
         width:65%;
+
+        @include respond(mac) {
+            width:80%;
+            font-size: 2.5rem;
+        }
     }
 
     &__heading-span {
@@ -98,6 +103,10 @@
         -webkit-box-decoration-break: clone;
         box-decoration-break: clone;
         text-align: right;
+
+        @include respond(mac) {
+            padding: 0.7rem 0.1rem;
+        }
 
 
         &--1 {
