--- a/src/sass/layout/_navigation.scss
+++ b/src/sass/layout/_navigation.scss
@@ -39,6 +39,19 @@
         box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
         transition: all 0.2s;
 
+
+
+        @include  respond(pad) {
+            top: 4rem;
+            right: 4rem;
+        }
+
+        @include  respond(phone) {
+            top: 3rem;
+            right: 3rem;
+        }
+
+
         &:hover {
             transform: translateY(-3px);
         }
@@ -59,6 +72,18 @@
         z-index: 1000;
         -webkit-transition: all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
         transition: all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+
+        @include  respond(pad) {
+            top: 4.5rem;
+            right: 4.5rem;
+        }
+
+        @include  respond(phone) {
+            top: 3.5rem;
+            right: 3.5rem;
+        }
+
+
     }
 
     &__nav {
