--- a/src/sass/page/_home.scss
+++ b/src/sass/page/_home.scss
@@ -2,8 +2,12 @@
 
 .section-about {
     background-color: $color-grey-light-1;
-    padding: 25rem 0;
+    padding: 25rem 2rem;
     margin-top: -20vh;
+
+    @include respond(pad) {
+        padding: 25rem 0 40rem 0;
+    }
 }
 
 .section-feature {
@@ -23,18 +27,30 @@
 
     //clip-path: polygon(0 20vh, 100% 0, 100% 80vh, 0 100%);
 
+    @include respond(pad) {
+        padding: 10rem 0;
+    }
+
 }
 
 .section-tours {
     background-color: $color-grey-light-1;
     padding: 25rem 10rem;
     margin-top: -10rem;
+
+    @include respond(pad) {
+        padding: 20rem 0 10rem 0;
+    }
 }
 
 .section-stories {
     position: relative;
     background-color: transparent;
     padding: 15rem 0;
+
+    @include respond(pad) {
+        padding: 10rem 0;
+    }
 }
 
 .section-book {
@@ -43,7 +59,6 @@
 }
 
 .book {
-    height:50rem;
     margin: 0 auto;
     background-image: linear-gradient(105deg, rgba($color-white, 0.8) 0%, rgba($color-white, 0.8) 50%, transparent 50%),  url("https://raw.githubusercontent.com/jonasschmedtmann/advanced-css-course/master/Natours/starter/img/nat-10.jpg");
     background-size: cover;
@@ -51,7 +66,14 @@
     border-radius: 4px;
     @include shadow(0.3);
 
+    @include respond(pad) {
+        background-image: linear-gradient(to right, rgba($color-white, 0.8) 0%, rgba($color-white, 0.8) 100%),  url("https://raw.githubusercontent.com/jonasschmedtmann/advanced-css-course/master/Natours/starter/img/nat-10.jpg");
+    }
+
     &__form {
         width: 50%;
+        @include respond(pad) {
+            width: 100%;
+        }
     }
 }
